--- a/nginx.conf
+++ b/nginx.conf
@@ -30,14 +30,17 @@ server {
 
     # Specific routes for calculator pages
     location = / {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
         try_files /index.html =404;
     }
 
     location = /quotation.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
         try_files /quotation.html =404;
     }
 
     location = /index.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
         try_files /index.html =404;
     }
 
